5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1880.log
== SUBMITION (2019-04-24 14:42:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m = 1:
	print("janeiro")
elif m = 2:
	print("fevereiro")
elif m = 3:
	print("marco")
elif m = 4:
	print("abril")
elif m = 5:
	print("maio")
elif m = 6:
	print("junho")
elif m = 7:
	print("julho")
elif m = 8:
	print("agosto")
elif m = 9:
	print("setembro")
elif m = 10:
	print("outubro")
elif m = 11:
	print("novembro")
elif m = 12:
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.166778
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 4
    if m = 1:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:42:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
if m = 1:
	print("janeiro")
elif m = 2:
	print("fevereiro")
elif m = 3:
	print("marco")
elif m = 4:
	print("abril")
elif m = 5:
	print("maio")
elif m = 6:
	print("junho")
elif m = 7:
	print("julho")
elif m = 8:
	print("agosto")
elif m = 9:
	print("setembro")
elif m = 10:
	print("outubro")
elif m = 11:
	print("novembro")
else
	print("dezembro")
-- EXECUTION TIME:
0.149353
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 6
    if m = 1:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:43:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
if m == 1:
	print("janeiro")
elif m == 2:
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4:
	print("abril")
elif m == 5:
	print("maio")
elif m == 6:
	print("junho")
elif m == 7:
	print("julho")
elif m == 8:
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10:
	print("outubro")
elif m == 11:
	print("novembro")
else
	print("dezembro")
-- EXECUTION TIME:
0.144693
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 28
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:43:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
elif m == 1:
	print("janeiro")
elif m == 2:
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4:
	print("abril")
elif m == 5:
	print("maio")
elif m == 6:
	print("junho")
elif m == 7:
	print("julho")
elif m == 8:
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10:
	print("outubro")
elif m == 11:
	print("novembro")
else
	print("dezembro")
-- EXECUTION TIME:
0.193025
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 28
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:43:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
elif m == 1:
	print("janeiro")
elif m == 2:
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4:
	print("abril")
elif m == 5:
	print("maio")
elif m == 6:
	print("junho")
elif m == 7:
	print("julho")
elif m == 8:
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10:
	print("outubro")
elif m == 11:
	print("novembro")
else
	print("dezembro")
-- ERROR:
File "XXXX", line 28
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:43:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
elif m == 1:
	print("janeiro")
elif m == 2:
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4:
	print("abril")
elif m == 5:
	print("maio")
elif m == 6:
	print("junho")
elif m == 7:
	print("julho")
elif m == 8:
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10:
	print("outubro")
elif m == 11:
	print("novembro")
else:
	print("dezembro")
-- EXECUTION TIME:
0.204609
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
dezembro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:43:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if m > 12 and m < 1:
	print("numero de mes invalido")
elif m == 1:
	print("janeiro")
elif m == 2:
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4:
	print("abril")
elif m == 5:
	print("maio")
elif m == 6:
	print("junho")
elif m == 7:
	print("julho")
elif m == 8:
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10:
	print("outubro")
elif m == 11:
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:45:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if (m >= 1) and (m <= 12):
	elif m == 1:
		print("janeiro")
	elif m == 2:
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4:
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6:
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8:
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10:
		print("outubro")
	elif m == 11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.17186
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    elif m == 1:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if (m >= 1) and (m <= 12):
	elif m == 1:
		print("janeiro")
	elif m == 2:
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4:
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6:
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8:
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10:
		print("outubro")
	elif m == 11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 5
    elif m == 1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if (m >= 1) and (m <= 12):
	if m == 1:
		print("janeiro")
	elif m == 2:
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4:
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6:
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8:
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10:
		print("outubro")
	elif m == 11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:46:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes(es): (1 a 12)"))

if (m >= 1) and (m <= 12):
	if m == 1:
		print("janeiro")
	elif m == 2:
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4:
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6:
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8:
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10:
		print("outubro")
	elif m == 11:
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.204319
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
